git-series-push: add option to list series
Option to list possible ongoing series. Might be more useful to actually
look for stalled/ended series to delete. It uses the same pattern as the
option '-e' to look for 'git publish' tags.

Signed-off-by: Nuno Sá <noname.nuno@gmail.com>

--- a/git-series-push/git-series-push.pod
+++ b/git-series-push/git-series-push.pod
@@ -43,6 +43,10 @@ Does not run get_maintainer.pl. Naturally, implies --to (see L<git-publish(1)>) 
 End a patchseries. This means deleting all version tags and the topic branch. If branch is not given, defaults
 to where current head is pointing to.
 
+=item B<-s, --show-series>
+
+Shows possible ongoing (or ended) series.
+
 =back
 
 =head1 AUTHOR
